tests/NormalTests/paczka1/small_fuzzy/26250345.err
Error in line 5: pgugpdbA5 A5 4,3
Error in line 9: pgugpdbA5 S11 8,7
